# number

./: Cargo.toml  README.md  flake.nix
.cargo/: config.toml
examples/: test_parse.rs  test_serde.rs  usage.rs
src/: borsh.rs  float.rs  from.rs  lib.rs  num_bigint.rs  num_rational.rs  num_traits.rs  ruint.rs  schemars.rs  serde.rs  string.rs  try_into.rs  typical.rs
src/encdec/: borsh.rs  rational_varint.rs  scale.rs  serde.rs  typical.rs
tests/: number.rs  serde_float.rs  serde_integer.rs
