[package]
name = "number"
version = "0.1.0"
edition = "2024"
description = "tired of numberic casts and manual conversions? use composable number!"

[features]
borsh = ["dep:borsh"]
borsh__schema = ["borsh", "borsh/unstable__schema"]
float = []
num-bigint = ["dep:num-bigint"]
num-rational = ["dep:num-rational"]
num-traits = ["dep:num-traits"]
ruint = ["dep:ruint"]
scale = ["dep:parity-scale-codec"]
schemars = ["dep:schemars"]
serde = ["dep:serde"]
typical = []

[dependencies]
borsh = { version = "1.6.1", optional = true }
malachite-base = "0.9.1"
malachite-nz = "0.9.1"
malachite-q = "0.9.1"
num-bigint = { version = "0.4.6", optional = true }
num-rational = { version = "0.4.2", optional = true }
num-traits = { version = "0.2.19", optional = true }
parity-scale-codec = { version = "3.7.5", optional = true }
ruint = { version = "1.17.2", optional = true }
schemars = { version = "1.2", optional = true }
serde = { version = "1.0.228", optional = true }

[dev-dependencies]
serde_json = "1.0.145"
